# rag-knowledge-base

./: .env.example  .gitignore  DECISIONS.md  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  chunking.py  db.py  embeddings.py  extraction.py  graph.py  graph_extract.py  graph_resolve.py  ingest.py  limits.py  llm.py  main.py  middleware.py  models.py  rerank.py  retrieval.py  settings.py
app/routes/: chat.py  document.py  search.py  text.py
evals/: README.md  golden.py  run_eval.py
sql/: schema.sql
tests/: conftest.py  test_chat_citations.py  test_chunker.py  test_graph_resolve.py  test_graph_smoke.py  test_search_smoke.py
